styling and refactoring

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -1,13 +1,45 @@
-body {
+html,
+body,
+#root {
+    color-scheme: dark;
+    width: 100vw;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+
+    font-family:
+        'IBM Plex Sans',
+        -apple-system,
+        BlinkMacSystemFont,
+        'Segoe UI',
+        Roboto,
+        'Helvetica Neue',
+        Arial,
+        sans-serif,
+        'Apple Color Emoji',
+        'Segoe UI Emoji',
+        'Segoe UI Symbol';
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
+#root {
+    position: relative;
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+    scrollbar-color: var(--mui-palette-primary-dark) var(--mui-palette-divider);
+    scrollbar-width: thin;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background: var(--mui-palette-divider);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--mui-palette-primary-dark);
+    border-radius: var(--mui-shape-borderRadius);
 }
